--- a/style.css
+++ b/style.css
@@ -615,7 +615,7 @@ a {
 }
 
 .promo-banner.raspberry {
-	background: #9b2a4a url("img/malina.jpg");
+	background: #9b2a4a url("../img/malina.jpg");
 	background-size: cover;
 }
 
